[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/bg/bg_game.png" type="Texture" id=1]
[ext_resource path="res://puppet.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/PresidentData.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Players.gd" type="Script" id=4]
[ext_resource path="res://Assets/decoration/lines.png" type="Texture" id=5]
[ext_resource path="res://Scripts/EndButton.gd" type="Script" id=6]
[ext_resource path="res://Scenes/VotingPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/decoration/calendar.png" type="Texture" id=8]
[ext_resource path="res://Assets/bg/bg_law.png" type="Texture" id=9]
[ext_resource path="res://Assets/decoration/black-lines.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Hand.gd" type="Script" id=11]
[ext_resource path="res://Scenes/RoleImage.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scripts/Identity.gd" type="Script" id=13]
[ext_resource path="res://Scenes/FacistWinCondition.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/DemocratWinCondition.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/ProfileImage.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scripts/Laws.gd" type="Script" id=17]
[ext_resource path="res://Scripts/Board.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=19]
[ext_resource path="res://Assets/decoration/president.png" type="Texture" id=20]
[ext_resource path="res://Scripts/GameStatusLabel.gd" type="Script" id=21]
[ext_resource path="res://Scenes/PlayerElection.tscn" type="PackedScene" id=22]
[ext_resource path="res://Fonts/GermaniaOne-Regular.ttf" type="DynamicFontData" id=23]
[ext_resource path="res://Assets/icons/bi_info-square-fill.png" type="Texture" id=24]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=3]
size = 28
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=5]
size = 320
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=6]
size = 229
font_data = ExtResource( 23 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 23 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 131, 101.25 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 23 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Fonts/GermaniaOne-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 43
font_data = SubResource( 11 )

[sub_resource type="DynamicFont" id=13]
size = 18
font_data = ExtResource( 23 )

[node name="Game" type="Node2D"]
script = ExtResource( 19 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 609.005, 304.217 )
scale = Vector2( 1.02041, 1.05586 )
texture = ExtResource( 1 )

[node name="LeftSide" type="Node2D" parent="."]

[node name="Laws" type="Node2D" parent="LeftSide"]
script = ExtResource( 17 )

[node name="BG" type="Sprite" parent="LeftSide/Laws"]
position = Vector2( 166.811, 201.986 )
scale = Vector2( 0.460841, 0.55533 )
texture = ExtResource( 9 )

[node name="TextureRect" type="TextureRect" parent="LeftSide/Laws"]
margin_left = 63.0
margin_top = 58.0
margin_right = 257.0
margin_bottom = 69.0
texture = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="LeftSide/Laws"]
margin_left = 50.5295
margin_top = 32.1091
margin_right = 273.529
margin_bottom = 64.1091
custom_colors/font_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_fonts/font = SubResource( 1 )
text = "Leyes promulgadas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LawsContainer" type="Node2D" parent="LeftSide/Laws"]
position = Vector2( 60, 80 )

[node name="Law1" type="Node2D" parent="LeftSide/Laws/LawsContainer"]

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law1"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "1."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Law2" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 45 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law2"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "2."

[node name="Law3" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 90 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "3."

[node name="Law4" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 135 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law4"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "4."

[node name="Law5" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 180 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law5"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "5."

[node name="Law6" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 225 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law6"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "6."

[node name="Law7" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 0, 270 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law7"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "7."

[node name="Law8" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 0 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law8"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "8."

[node name="Law9" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 45 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law9"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 20.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "9."

[node name="Law10" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 90 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law10"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 30.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "10."

[node name="Law11" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 135 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law11"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 31.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "11."

[node name="Law12" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 180 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law12"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 30.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "12."

[node name="Law13" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 225 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law13"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 30.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "13."

[node name="Law14" type="Node2D" parent="LeftSide/Laws/LawsContainer"]
position = Vector2( 120, 270 )

[node name="Label" type="Label" parent="LeftSide/Laws/LawsContainer/Law14"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -5.5
margin_right = 31.0
margin_bottom = 22.5
custom_colors/font_color = Color( 0.2, 0.2, 0.2, 1 )
custom_fonts/font = SubResource( 2 )
text = "14."

[node name="Identity" type="Node2D" parent="LeftSide"]
position = Vector2( 5.04538, 414.841 )
script = ExtResource( 13 )

[node name="BG" type="Sprite" parent="LeftSide/Identity"]
position = Vector2( 180, 163 )
scale = Vector2( 0.55, 0.55 )

[node name="Title" type="Label" parent="LeftSide/Identity"]
anchor_left = 0.253
anchor_top = 0.05
anchor_right = 0.761
anchor_bottom = 0.131
margin_left = 74.7651
margin_top = -30.4423
margin_right = 280.765
margin_bottom = 5.55771
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Tu Identidad"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LeftSide/Identity/Title"]
anchor_bottom = 1.0
margin_left = -31.0
margin_top = 30.0
margin_right = 237.0
margin_bottom = 10.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoleLabel" type="Label" parent="LeftSide/Identity"]
margin_left = 23.3265
margin_top = 118.0
margin_right = 166.326
margin_bottom = 177.0
custom_colors/font_color = Color( 1, 0.992157, 0.980392, 1 )
custom_fonts/font = SubResource( 4 )
text = "Pamela eres demócrata"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Images" type="Node2D" parent="LeftSide/Identity"]
position = Vector2( 36.4084, 26.2421 )

[node name="Profile" type="Node2D" parent="LeftSide/Identity/Images"]
position = Vector2( -20.7589, -22.4492 )
scale = Vector2( 0.5, 0.5 )

[node name="ProfileImage" parent="LeftSide/Identity/Images/Profile" instance=ExtResource( 16 )]
position = Vector2( 191.242, 113.36 )
scale = Vector2( 1.11339, 1.11339 )

[node name="ProfilePartnerImage" type="Sprite" parent="LeftSide/Identity/Images/Profile"]
position = Vector2( 182, 182 )
scale = Vector2( 0.5, 0.5 )

[node name="Role" type="Node2D" parent="LeftSide/Identity/Images"]
position = Vector2( 143.812, 11.8945 )
scale = Vector2( 0.5, 0.5 )

[node name="RoleImage" parent="LeftSide/Identity/Images/Role" instance=ExtResource( 12 )]

[node name="Info" type="TextureButton" parent="LeftSide/Identity/Images"]
margin_top = -3.0
margin_right = 22.0
margin_bottom = 19.0
texture_normal = ExtResource( 24 )
expand = true

[node name="DemocratWinCondition" parent="LeftSide/Identity/Images/Info" instance=ExtResource( 15 )]
visible = false
position = Vector2( 260, -300 )
z_index = 10

[node name="FacistWinCondition" parent="LeftSide/Identity/Images/Info" instance=ExtResource( 14 )]
visible = false
position = Vector2( 260, -300 )
scale = Vector2( 1, 1 )
z_index = 10

[node name="RightSide" type="Node2D" parent="."]
position = Vector2( 346.771, 7.37389 )

[node name="Players" type="Node2D" parent="RightSide"]
position = Vector2( 188.279, 32.1 )
script = ExtResource( 4 )

[node name="ProfileImage1" parent="RightSide/Players" instance=ExtResource( 16 )]
position = Vector2( 57, 49 )

[node name="right1" type="Sprite" parent="RightSide/Players"]
position = Vector2( 127, 49 )
scale = Vector2( 0.2, 0.275 )

[node name="ProfileImage2" parent="RightSide/Players" instance=ExtResource( 16 )]
position = Vector2( 197, 49 )

[node name="right2" type="Sprite" parent="RightSide/Players"]
position = Vector2( 267, 49 )
scale = Vector2( 0.2, 0.275 )

[node name="ProfileImage3" parent="RightSide/Players" instance=ExtResource( 16 )]
position = Vector2( 337, 49 )

[node name="right3" type="Sprite" parent="RightSide/Players"]
position = Vector2( 407, 49 )
scale = Vector2( 0.2, 0.275 )

[node name="ProfileImage4" parent="RightSide/Players" instance=ExtResource( 16 )]
position = Vector2( 477, 49 )

[node name="PresidentData" type="Node2D" parent="RightSide"]
position = Vector2( 45, 130 )
script = ExtResource( 3 )

[node name="President" type="TextureRect" parent="RightSide/PresidentData"]
margin_left = -28.0
margin_top = 22.0
margin_right = 2543.0
margin_bottom = 694.0
rect_scale = Vector2( 0.06, 0.08 )
texture = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RightSide/PresidentData/President"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.5903
margin_top = 122.384
margin_right = 15.5903
margin_bottom = -177.616
custom_colors/font_color = Color( 0.164706, 0.164706, 0.164706, 1 )
custom_fonts/font = SubResource( 5 )
text = "Presidente:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresidentName" type="TextureRect" parent="RightSide/PresidentData"]
margin_left = 140.182
margin_top = -3.78186
margin_right = 2540.18
margin_bottom = 596.218
rect_scale = Vector2( 0.06, 0.08 )

[node name="Label" type="Label" parent="RightSide/PresidentData/PresidentName"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -780.938
margin_top = 366.363
margin_right = -780.938
margin_bottom = 366.363
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
custom_fonts/font = SubResource( 5 )
text = "Pamela"
align = 1
valign = 1

[node name="VotingDay" type="TextureRect" parent="RightSide/PresidentData"]
margin_left = -31.0
margin_top = -119.0
margin_right = 2108.0
margin_bottom = 1499.0
rect_scale = Vector2( 0.06, 0.08 )
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RightSide/PresidentData/VotingDay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 348.0
margin_top = 518.0
margin_right = -387.0
margin_bottom = -635.0
custom_colors/font_color = Color( 0.227451, 0.227451, 0.227451, 1 )
custom_fonts/font = SubResource( 6 )
text = "4 día(s)"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Board" type="Node2D" parent="RightSide"]
position = Vector2( 0, 190 )
script = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="RightSide/Board"]
position = Vector2( 289, 214 )
scale = Vector2( 0.7, 0.7 )
offset = Vector2( -20, -30 )

[node name="EndButton" type="Button" parent="RightSide/Board"]
anchor_left = 0.104
anchor_top = 0.844
anchor_right = 0.367
anchor_bottom = 0.911
margin_left = 17.0661
margin_top = 138.56
margin_right = 148.066
margin_bottom = 172.56
theme = ExtResource( 2 )
text = "Terminar Turno"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VotingPanel" parent="RightSide/Board" instance=ExtResource( 7 )]
position = Vector2( 34.5081, 138.373 )

[node name="RoundLabel" type="Label" parent="RightSide/Board"]
margin_left = 22.7705
margin_top = 26.3332
margin_right = 140.771
margin_bottom = 62.3332
custom_colors/font_color = Color( 0.945098, 0.576471, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Día 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropZone" type="Area2D" parent="RightSide/Board"]
position = Vector2( 501.543, 64.8196 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightSide/Board/DropZone"]
position = Vector2( 65.11, 41.7734 )
shape = SubResource( 8 )

[node name="GameStatusLabel" type="Label" parent="RightSide/Board"]
margin_left = 20.8184
margin_top = 65.2499
margin_right = 359.818
margin_bottom = 119.25
custom_colors/font_color = Color( 0.823529, 0.796078, 0.796078, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 9 )
text = "Xavi esta jugando"
align = 1
valign = 1
autowrap = true
script = ExtResource( 21 )

[node name="Label" type="Label" parent="RightSide/Board/GameStatusLabel"]
margin_left = 9.0
margin_top = -3.0
margin_right = 49.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 0.552941, 0.0235294, 1 )
custom_fonts/font = SubResource( 12 )
text = "|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMessage" type="Label" parent="RightSide/Board"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -20.306
margin_right = 270.0
margin_bottom = 78.694
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="Node2D" parent="RightSide"]
position = Vector2( 49.8337, 490.052 )
script = ExtResource( 11 )

[node name="PlayerElection" parent="." instance=ExtResource( 22 )]
visible = false

[connection signal="pressed" from="LeftSide/Identity/Images/Info" to="LeftSide/Identity" method="_on_Info_pressed"]
[connection signal="pressed" from="RightSide/Board/EndButton" to="RightSide/Board/EndButton" method="_on_EndButton_pressed"]
